# mcp-maps-mongodb

./: .gitignore  Dockerfile  LICENSE  README.md  index.css  index.tsx  mcp_maps_server.ts  metadata.json  package-lock.json  package.json  playground.ts
backend/db-endpoint/: Cargo.toml  Dockerfile  README.md  api-config-updated.yaml  api-config.yaml  cloudbuild.yaml  deploy.sh  service.yaml  test-curl.md
backend/db-endpoint/src/: document.rs  main.rs
backend/db-endpoint/src/openai/: lib_response.rs  libs.rs  mod.rs  requests.rs  response.rs  utils.rs
backend/mcp-servers/: Cargo.toml
backend/mcp-servers/src/: calculator_server.rs
frontend/: .gitignore  README.md  index.html  index.tsx  package-lock.json  package.json  vite.config.ts  x-cloudbuild
frontend/src/: index.tsx
frontend/src/services/: mcp_maps_server.ts  playground.ts
