[package]
name = "db-endpoint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.13"

tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.6"
log = "0.4.25"

uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41",  features = ["serde"] }
mongodb = "3.2.3"

schemars = "0.8.21"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
thiserror = "2.0.11"
futures = "0.3"
async-stream = "0.3.6"

base64 = "0.22.1"
